--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <module>swift-maven-plugin</module>
     <module>swift-load-generator</module>
     <module>swift2thrift-generator-cli</module>
+    <module>swift-load-test-server</module>
   </modules>
 
   <inceptionYear>2012</inceptionYear>
