--- a/swift-generator/pom.xml
+++ b/swift-generator/pom.xml
@@ -49,5 +49,11 @@
       <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
