--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <dep.airlift.version>0.70</dep.airlift.version>
     <dep.antlr.version>3.5</dep.antlr.version>
     <dep.maven-api.version>2.2.1</dep.maven-api.version>
-    <dep.fb.nifty.version>0.6.0-SNAPSHOT</dep.fb.nifty.version>
+    <dep.fb.nifty.version>0.6.0.netty4-SNAPSHOT</dep.fb.nifty.version>
   </properties>
 
   <dependencyManagement>
@@ -178,8 +178,26 @@
 
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty</artifactId>
-        <version>3.6.2.Final</version>
+        <artifactId>netty-buffer</artifactId>
+        <version>4.0.0.CR1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-common</artifactId>
+        <version>4.0.0.CR1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-handler</artifactId>
+        <version>4.0.0.CR1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-transport</artifactId>
+        <version>4.0.0.CR1</version>
       </dependency>
 
       <dependency>
