--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <dep.airlift.version>0.70</dep.airlift.version>
     <dep.antlr.version>3.5</dep.antlr.version>
     <dep.maven-api.version>2.2.1</dep.maven-api.version>
-    <dep.fb.nifty.version>0.7.0</dep.fb.nifty.version>
+    <dep.fb.nifty.version>0.7.1-SNAPSHOT</dep.fb.nifty.version>
   </properties>
 
   <dependencyManagement>
